--- a/Exercises/02 - holy-grail-mockup/styles.css
+++ b/Exercises/02 - holy-grail-mockup/styles.css
@@ -9,6 +9,7 @@
   grid-template-columns: repeat(1, 1fr 4fr);
   grid-template-rows: 0.5fr 0.25fr 2fr 2fr 0.25fr;
   gap:4px;
+  height:100vh;
 }
 
 .container-item {
@@ -51,9 +52,8 @@
 .items-4 {
   grid-row: span 2;
   display:grid;
-  height:100%;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(180px, 1fr));
   background-color: rgba(188,203,222,255);
   padding: 12px;
   gap:15px;
@@ -111,5 +111,4 @@ h3 {
   align-items: center;
   color: white;
   font-size: 1.3em;
-
 }
