--- a/Assignments/JS/To-do-list/styles.css
+++ b/Assignments/JS/To-do-list/styles.css
@@ -138,7 +138,7 @@ input {
     gap:1em;
 }
 
-.todo-text:hover {
+.not-editing:hover {
     text-decoration: line-through;
     cursor: pointer;
 }
