extended amount of words needed to reach next like - previously too short

--- a/Assignments/JS/To-do-list/styles.css
+++ b/Assignments/JS/To-do-list/styles.css
@@ -154,5 +154,12 @@ input {
     text-decoration: line-through;
 }
 
+.todo-text {
+    width:100%;
+}
+
+.todo-item-group {
+    width: 10%;
+}
 
 
